        can be configured through ZCML (see
        Products/PageTemplates/(configure.zcml, unicodeconflictresolver.py,
        interfaces.py)

      - AccessControl.Role: added new method
        manage_getUserRolesAndPermissions().

      - AccessControl: the form behind the "Security" tab has a new form
        for user-related reporting of permissions and roles

    Bugs Fixed

      - DAV: litmus props tests 19: propvalnspace and 20:
        propwformed were failing because Zope did not strip off the
        xmlns: attribute attached to XML property values.  We now strip
        off all attributes that look like xmlns declarations.

      - DAV: When a client attempted to unlock a resource with a token
        that the resource hadn't been locked with, in the past we
        returned a 204 response.  This was incorrect.  The "correct"
        behavior is to do what mod_dav does, which is return a '400
        Bad Request' error.  This was caught by litmus
        locks.notowner_lock test #10.  See
        http://lists.w3.org/Archives/Public/w3c-dist-auth/2001JanMar/0099.html
        for further rationale.

      - When Zope properties were set via DAV in the "null" namespace
        (xmlns="") a subsequent PROPFIND for the property would cause the 
        XML representation for that property to show a namespace of 
        xmlns="None".  Fixed within OFS.PropertySheets.dav__propstat.

      - Relaxed requirements for context of
        Products.Five.browser.pagetemplatefile.ZopeTwoPageTemplateFile,
        to reduce barriers for testing renderability of views which use them.
        (http://www.zope.org/Collectors/Zope/2327)

      - Collector #2304: fixed markup issue in ptEdit.zpt

      - Collector #2260: fixed bug in Examples package

      - Collector #2320: HTTPResponse setHeader lowercased keys but getHeader
        did not, causing lookups of 'Content-Type' to fail

      - Collector #2307: ObjectCopiedEvent not dispatched to sublocations.
